# loganalyzer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
loganalyzer/: cli.py  models.py  scheduler.py  watcher.py
loganalyzer/analyzers/: __init__.py
loganalyzer/dashboard/: app.py
loganalyzer/output/: html_output.py  json_output.py  terminal.py
loganalyzer/parsers/: __init__.py  apache.py  base.py  extras.py  nginx.py
tests/: test_loganalyzer.py
